jS-Strict-Mode/Examples/example2.js
"use strict";
num1 = 1;
// ReferenceError: num1 is not defined